this should fix letter spacing for contact

--- a/css/styles-header-footer.css
+++ b/css/styles-header-footer.css
@@ -33,15 +33,6 @@ p {
   margin: auto;
 }
 
-.welcome-info a {
-  text-decoration: none;
-  color: black;
-}
-
-.welcome-info a:hover {
-  color: #77bfd2;
-}
-
 #payment-graphic {
   width: 23vw;
 }
